--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World
+<!Doctype html>
+<html>
+	<meta charset = "UTF-8">
+<head>
+<title> Stay Loose</title>
+
+<link rel="stylesheet" href="mystyle.css">
+</head>
+<body>
+<h1>  Surfing Europe </h1>
+<h2> Surfing the Algarve </h2>
+<p> The Algarve is one of the most relaxing parts of Europe. </p>
+<a href="surf.html">Go surf</a>
+<hr>
+<a href="https://www.travelonboards.de/surfen-lernen-in-europa-die-besten-spots/" target="_blank">Surf Europe</a>
+<hr>
+<img id ="surf" src="D:\FH\2 Semester\webTech\hü2\koglert.github.io\media\surf.jpg">
+<a href="algarve.html"><img src="D:\FH\2 Semester\webTech\hü2\koglert.github.io\media\surf.jpg"  /></a>
+
+</body>
+</html>
