--- a/algarve.html
+++ b/algarve.html
@@ -11,8 +11,9 @@
 <h2> Relax </h2>
 <p> Whats up </p>
 <a href="index.html">Go Home or stay loose</a>
-<hr>
 
+<hr>
+<img id ="surf" src="media\wine.jpg">
 
 </body>
 </html>
