--- a/surf.html
+++ b/surf.html
@@ -12,7 +12,7 @@
 <p> Whats up </p>
 <a href="index.html">Go Home or stay loose</a>
 <hr>
-
+<img id ="surf" src="media\wave.jpg">
 
 </body>
 </html>
