--- a/algarve.html
+++ b/algarve.html
@@ -1,7 +1,9 @@
 <!Doctype html>
-<html>
-	<meta charset = "UTF-8">
+<html lang="en">
 <head>
+	<meta charset = "UTF-8">
+
+
 <title> Jump in</title>
 
 <link rel="stylesheet" href="mystyle.css">
@@ -13,7 +15,7 @@
 <a href="index.html">Go Home or stay loose</a>
 
 <hr>
-<img id ="surf" src="media\wine.jpg">
+<img id ="surf" src="media/wine.jpg" alt="table with wine in front of sea">
 
 </body>
 </html>
