--- a/index.html
+++ b/index.html
@@ -1,46 +1,45 @@
 <!Doctype html>
-<html>
-	<meta charset = "UTF-8">
-<head>
-<title> Stay Loose</title>
-
-<link rel="stylesheet" href="mystyle.css">
+<html lang="en">
+	<head>
+		<meta charset = "UTF-8">
+		<title> Stay Loose</title>
+		<link rel="stylesheet" href="mystyle.css">
 </head>
-<body>
-<h1>  Surfing Europe </h1>
+	<body>
+		<h1>  Surfing Europe </h1>
 
-<div class="surfing">
-  <p>Cause you can
-  </p>
-</div>
+		<div class="surfing">
+		  <p>Cause you can
+		  </p>
+		</div>
 
-<ul>
-  <li>Things you need for your Surftrip</li>
-  <li>Car
-    <ul>
-      <li>Surfboard</li>
-      <li>Wettsuit</li>
-      <li>some coins</li>
-    </ul>
-  </li>
-  <li>sleep surf repeat</li>
-</ul>
-<audio id ="bensound"
-controls
-src="media\bensound-happiness.mp3"
->
-</audio>
-<p> https://www.bensound.com/royalty-free-music/acoustic-folk </p>
-<h2> Surfing the Algarve </h2>
-<p> The Algarve is one of the most relaxing parts of Europe. </p>
-<p class="class">so try it</p>
-<p id ="id">now!</p>
-<a href="surf.html">Go surf</a>
-<hr>
-<a href="https://www.travelonboards.de/surfen-lernen-in-europa-die-besten-spots/" target="_blank">Surf Europe</a>
-<hr>
+		<ul>
+		  <li>Things you need for your Surftrip</li>
+		  <li>Car
+		    <ul>
+		      <li>Surfboard</li>
+		      <li>Wettsuit</li>
+		      <li>some coins</li>
+		    </ul>
+		  </li>
+		  <li>sleep surf repeat</li>
+		</ul>
+		<audio id ="bensound"
+		controls
+		src="media/bensound-happiness.mp3"
+		>
+		</audio>
+		<p> https://www.bensound.com/royalty-free-music/acoustic-folk </p>
+		<h2> Surfing the Algarve </h2>
+		<p> The Algarve is one of the most relaxing parts of Europe. </p>
+		<p class="class">so try it</p>
+		<p id ="id">now!</p>
+		<a href="surf.html">Go surf</a>
+		<hr>
+		<a href="https://www.travelonboards.de/surfen-lernen-in-europa-die-besten-spots/" target="_blank">Surf Europe</a>
+		<hr>
 
-<a href="algarve.html"><img src="media\surf.jpg"  /></a>
+		<a href="algarve.html"><img src="media\surf.jpg" alt="aussicht aus dem Bus"  ></a>
 
-</body>
+	</body>
 </html>
