--- a/surf.html
+++ b/surf.html
@@ -1,7 +1,8 @@
 <!Doctype html>
-<html>
-	<meta charset = "UTF-8">
+<html lang="en">
 <head>
+	<meta charset = "UTF-8">
+
 <title> Jump in</title>
 
 <link rel="stylesheet" href="mystyle.css">
@@ -12,7 +13,7 @@
 <p> Whats up </p>
 <a href="index.html">Go Home or stay loose</a>
 <hr>
-<img id ="surf" src="media\wave.jpg">
+<img id ="surf" src="media/wave.jpg" alt="surfing">
 
 </body>
 </html>
