last error changed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<a href="https://www.travelonboards.de/surfen-lernen-in-europa-die-besten-spots/" target="_blank">Surf Europe</a>
 		<hr>
 
-		<a href="algarve.html"><img src="media\surf.jpg" alt="aussicht aus dem Bus"  ></a>
+		<a href="algarve.html"><img src="media/surf.jpg" alt="aussicht aus dem Bus"  ></a>
 
 	</body>
 </html>
